--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shreya Devagiri | DevOps Engineer & ML Enthusiast</title>
-    <meta name="description" content="Portfolio of Shreya Devagiri - DevOps Engineer at Mercedes-Benz R&D, pursuing MS in Computer Science at UT Dallas. Expertise in CI/CD, automation, and machine learning." />
+    <meta name="description" content="Portfolio of Shreya Devagiri - DevOps Engineer at Mercedes-Benz R&D, pursuing MS in Computer Science at University of Texas at Dallas. Expertise in CI/CD, automation, and machine learning." />
     <meta name="author" content="Shreya Devagiri" />
-    <meta name="keywords" content="DevOps, Machine Learning, CI/CD, Python, AWS, Mercedes-Benz, UT Dallas, Software Engineer" />
+    <meta name="keywords" content="DevOps, Machine Learning, CI/CD, Python, AWS, Mercedes-Benz, University of Texas at Dallas, Software Engineer" />
     <link rel="canonical" href="https://shreyadevagiri.com" />
 
     <meta property="og:title" content="Shreya Devagiri | DevOps Engineer & ML Enthusiast" />
